--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,36 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+
+executors:
+  ask-executor:
+    docker:
+      - image: xavidop/alexa-ask-aws-cli:2.0
+
+jobs:
+  checkout:
+    executor: ask-executor
+    steps:
+      - checkout
+      - run: chmod +x -R ./hooks
+      - run: chmod +x -R ./test
+      - persist_to_workspace:
+          root: /home/node/
+          paths:
+            - project
+  create:
+    executor: ask-executor
+    steps:
+      - attach_workspace:
+          at: /home/node/
+      - run: ls -la
+      - run: cd lambda/custom && npm install
+      - persist_to_workspace:
+          root: /home/node/
+          paths:
+            - project
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
-    jobs:
-      - welcome/run
+    skill-pipeline:
+      jobs:
+        - checkout
+        - create:
+            requires:
+              - checkout
