--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           root: /home/node/
           paths:
             - project
-  create:
+  create_hosted_skill:
     executor: ask-executor
     steps:
       - attach_workspace:
@@ -25,10 +25,48 @@ jobs:
           root: /home/node/
           paths:
             - project
+  download_template:
+    executor: ask-executor
+    steps:
+      - attach_workspace:
+          at: /home/node/
+      #removing ask cli template lambda + skill-packages
+      - run: rm -rf template/lambda/
+      - run: rm -rf template/skill-package/interactionModels
+      - run: git clone $GIT_TEMPLATE_URL
+      - run: basename=$(basename https://github.com/jeffblankenburg/AlexaSkillTemplate.git) && repo_folder=${basename%.*} 
+      #cleanup template downloaded metada, getting only lambda + skill-packages objeects
+      - run: rm -rf $repo_folder/.git && rm -rf $repo_folder/.ask && rm -rf $repo_folder/ask-resources.json && rm -rf $repo_folder/skill-package/skill.json 
+      #copy downloaded template fully cleaned to final template to push
+      - run: cp -R $repo_folder/. template/
+      - persist_to_workspace:
+          root: /home/node/
+          paths:
+            - project
+  deploy_hosted_skill:
+    executor: ask-executor
+    steps:
+      - attach_workspace:
+          at: /home/node/
+      #init some git global variables
+      - run: git config --global user.email "you@example.com"
+      - run: git config --global user.name "Your Name"
+      #push the final skill
+      - run: cd template/ && git push origin master
+      - persist_to_workspace:
+          root: /home/node/
+          paths:
+            - project
 workflows:
     skill-pipeline:
       jobs:
         - checkout
-        - create:
+        - create_hosted_skill:
             requires:
               - checkout
+        - download_template:
+           requires:
+            - create
+        - deploy_hosted_skill:
+           requires:
+            - download_template
