--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ workflows:
               - checkout
         - download_template:
            requires:
-            - create
+            - create_hosted_skill
         - deploy_hosted_skill:
            requires:
             - download_template
