--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,8 +46,8 @@ jobs:
       - run: 
           name: create hosted skill
           command: |
-            basename=$(basename $GIT_TEMPLATE_URL)
-            repo_folder=${basename%.*} 
+            base_file=$(basename $GIT_TEMPLATE_URL)
+            repo_folder=${base_file%.*} 
             ./create_hosted_skill.sh $repo_folder
       - persist_to_workspace:
           root: /home/node/
@@ -72,8 +72,8 @@ jobs:
       - run: 
           name: clean up donwloaded template
           command: |
-            basename=$(basename  $GIT_TEMPLATE_URL)
-            repo_folder=${basename%.*} 
+            base_file=$(basename $GIT_TEMPLATE_URL)
+            repo_folder=${base_file%.*} 
             rm -rf $repo_folder/.git && rm -rf $repo_folder/.ask && rm -rf $repo_folder/ask-resources.json && rm -rf $repo_folder/skill-package/skill.json 
             cp -R $repo_folder/. template/
       - persist_to_workspace:
