--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,15 +104,16 @@ jobs:
 
             rm -rf $repo_folder/.git 
             if [ "$ASK_VERSION" == "1.0" ]; then
-              info=$(cat $repo_folder/skill.json | jq .manifest.publishingInformation)
-              skill_info=$(jq  --arg info "$info" '.manifest.publishingInformation = $info' template/skill.json)
+              info=$(cat skill-sample-nodejs-highlowgame/skill.json | jq -r .manifest.publishingInformation)
+              skill_info=$(jq -r --arg info "$info" '.manifest.publishingInformation = $info' template/skill.json)
+              dir=$(cat skill-sample-nodejs-highlowgame/skill.json | jq .manifest.apis.custom.endpoint.sourceDir)
 
               rm -rf $repo_folder/.ask
               rm -rf $repo_folder/skill.json
               cp -R $repo_folder/. template/
               
-              cp -R  template/lambda/custom/. template/lambda/
-              rm -rf template/lambda/custom/
+              cp -R  template/${dir}/. template/lambda/
+              rm -rf template/${dir}
             else
 
                rm -rf $repo_folder/.ask 
