--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,22 +104,36 @@ jobs:
 
             rm -rf $repo_folder/.git 
             if [ "$ASK_VERSION" == "1.0" ]; then
-              info=$(cat $repo_folder/skill.json | jq -r .manifest.publishingInformation)
-              skill_info=$(jq -r --arg info "$info" '.manifest.publishingInformation = $info' template/skill.json)
+              info=$(cat $repo_folder/skill.json | jq -rc .manifest.publishingInformation)
+              skill_info=$(jq -rc --argjson info "$info" '.manifest.publishingInformation = $info' template/skill.json)
+              echo $skill_info > template/skill.json
+
               dir=$(cat $repo_folder/skill.json | jq -r .manifest.apis.custom.endpoint.sourceDir)
 
               rm -rf $repo_folder/.ask
               rm -rf $repo_folder/skill.json
               cp -R $repo_folder/. template/
               
-              cp -R  template/${dir}/. template/lambda/
-              rm -rf template/${dir}
+              if [ "$dir" != "lambda/" ]; then
+                cp -R  template/${dir}/. template/lambda/
+                rm -rf template/${dir}
+              fi
             else
+               info=$(cat $repo_folder/skill-package/skill.json | jq -rc .manifest.publishingInformation)
+               skill_info=$(jq -rc --argjson info "$info" '.manifest.publishingInformation = $info' template/skill-package/skill.json)
+               echo $skill_info > template/skill.json
+
+               dir=$(cat $repo_folder/ask-resources.json | jq -r .profiles.default.code.default.src)
 
                rm -rf $repo_folder/.ask 
                rm -rf $repo_folder/ask-resources.json 
                rm -rf $repo_folder/skill-package/skill.json
                cp -R $repo_folder/. template/
+              
+               if [ "$dir" != "./lambda" ]; then
+                cp -R  template/${dir}/. template/lambda/
+                rm -rf template/${dir}
+               fi
             fi
             
       - persist_to_workspace:
