--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,15 +121,14 @@ jobs:
                 rm -rf template/${dir}
               fi
             else
-               info=$(cat $repo_folder/skill-package/skill.json | jq -rc .manifest.publishingInformation)
-               skill_info=$(jq -rc --argjson info "$info" '.manifest.publishingInformation = $info' template/skill-package/skill.json)
-               echo $skill_info > template/skill-package/skill.json
+               endpoint=$(cat template/skill-package/skill.json | jq -rc .manifest.apis.custom.endpoint)
+               skill_info=$(jq -rc --argjson info "$endpoint" '.manifest.apis.custom.endpoint = $endpoint' $repo_folder/skill-package/skill.json)
+               echo $skill_info > $repo_folder/skill-package/skill.json
 
                dir=$(cat $repo_folder/ask-resources.json | jq -r .profiles.default.code.default.src)
 
                rm -rf $repo_folder/.ask 
                rm -rf $repo_folder/ask-resources.json 
-               rm -rf $repo_folder/skill-package/skill.json
                cp -R $repo_folder/. template/
               
                if [ "$dir" != "./lambda" ]; then
@@ -173,10 +172,8 @@ jobs:
             else
               git push origin master
             fi
-      - persist_to_workspace:
-          root: /home/node/
-          paths:
-            - project
+      - store_artifacts:
+          path: ./
 workflows:
     skill-pipeline:
       jobs:
